--- a/program/SD tinkering/platformio.ini
+++ b/program/SD tinkering/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+lib_deps = adafruit/Adafruit MPU6050@^2.2.6
