--- a/program/uart programmer/platformio.ini
+++ b/program/uart programmer/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico]
-platform = raspberrypi
-board = pico
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed = 1500000
+lib_deps = adafruit/Adafruit MPU6050@^2.2.6
